<resources>
    <string name="app_name">Android Tutorial</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="db_page">Click to edit Database</string>
    <string name="customer_name">Customer</string>
    <string name="age">Age</string>
    <string name="active_customer">Active Customer</string>
    <string name="btn_add">Add Values</string>
    <string name="btn_view">View All</string>
    <string name="number_format_error">Failed to input value</string>
    <string name="view_all_customers">View All Customers</string>
</resources>